--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
 	"homepage": "https://github.com/MouseZver/WindowsEvent",
 	"keywords": [
         "WindowsEvent",
+		"ScreenShot",
+		"mouseEvent",
 		"php7.4"
     ],
     "authors": [
@@ -15,7 +17,8 @@
         }
     ],
 	"require": {
-		"php": ">=7.4"
+		"php": ">=7.4",
+		"nouvu/config": ">=3.1"
 	},
 	"autoload": {
 		"psr-4": {
